<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/wave_topbar"
        android:padding="@dimen/padding_small"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="@dimen/padding_small"
            android:text="@string/Instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />



        <TextView
            android:id="@+id/viewcart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic|bold"
            android:text="@string/viewcart"
            android:textSize="@dimen/text_large"
            />
        <TextView
            android:id="@+id/vieworders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic|bold"
            android:text="@string/vieworders"
            android:textSize="@dimen/text_large"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/search"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_small">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:gravity="center_horizontal"
            android:text="@string/catalog"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>